--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,3 +2,5 @@ FROM testcafe/testcafe
 USER root
 RUN  npm install -g testcafe-reporter-html
 USER user
+EXPOSE 1337 1338
+ENTRYPOINT ["/opt/testcafe/docker/testcafe-docker.sh"]
