Add multiline reporter

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,6 @@ USER root
 
 ENV NODE_PATH=/opt:/usr/lib/node_modules:/opt/testcafe/node_modules
 
-RUN cd /opt/testcafe && npm install testcafe-reporter-html request totp-generator
+RUN cd /opt/testcafe && npm install testcafe-reporter-html-multiline request totp-generator
 
 USER user
